--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 argon2 = "0.5.3"
+askama = "0.14.0"
 axum = "0.8.4"
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 chrono = "0.4.41"
