--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ axum-extra = { version = "0.10.1", features = ["cookie"] }
 chrono = "0.4.41"
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
+reqwest = { version = "0.12.22", features = ["json"] }
 sea-orm = { version = "1.1.13", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
