--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 APP_PORT = 3333
 
 CORS_ORIGINS = http://localhost:3333
+
+DATABASE_URL = sqlite://db.sqlite
+DATABASE_MAX_CONNECTIONS = 2
+DATABASE_MIN_CONNECTIONS = 1
