--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4.41"
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
 reqwest = { version = "0.12.22", features = ["json"] }
-sea-orm = { version = "1.1.13", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
+sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.1", features = ["macros", "sync", "rt-multi-thread"] }
