--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ CORS_ORIGINS = http://localhost:3333
 DATABASE_URL = sqlite://db.sqlite
 DATABASE_MAX_CONNECTIONS = 2
 DATABASE_MIN_CONNECTIONS = 1
+
+JWT_SECRET = QIQuiz
