--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "QIQuiz"
 version = "0.1.0"
 edition = "2024"
 
+[workspace]
+members = [
+    "migration"
+]
+
 [dependencies]
 argon2 = "0.5.3"
 askama = "0.14.0"
@@ -11,6 +16,7 @@ axum-extra = { version = "0.10.1", features = ["cookie"] }
 chrono = "0.4.41"
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
+migration = { path = "./migration" }
 reqwest = { version = "0.12.22", features = ["json"] }
 sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
 serde = { version = "1.0.219", features = ["derive"] }
