--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 APP_PORT = 3333
 
+USER_ADMIN = admin
+USER_PASSWORD = 123123
+
 CORS_ORIGINS = http://localhost:3333
 
 DATABASE_URL = sqlite://db.sqlite
@@ -7,3 +10,4 @@ DATABASE_MAX_CONNECTIONS = 2
 DATABASE_MIN_CONNECTIONS = 1
 
 JWT_SECRET = QIQuiz
+JWT_EXPIRATION = 86400
