--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     container_name: QIQuiz
     environment:
       APP_PORT: 3333
+      USER_ADMIN: admin
+      USER_PASSWORD: 123123
       CORS_ORIGINS: http://localhost:3333
       DATABASE_URL: mysql://root:123123@database:3306/qiquiz
       DATABASE_MAX_CONNECTIONS: 2
       DATABASE_MIN_CONNECTIONS: 1
       JWT_SECRET: QIQuiz
+      JWT_EXPIRATION: 86400
     ports:
       - "3333:3333"
     depends_on:
