--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ chrono = "0.4.41"
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
 migration = { path = "./migration" }
+rand = "0.9.2"
 reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
 sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls"] }
 serde = { version = "1.0.219", features = ["derive"] }
